# latexcor

./: README.md  pyproject.toml
PROMPTS/: AUDIT_V2.md  AUDIT_V3.md  AUDIT_V4.md  END_SESSION.md  END_SESSION_V2.md  GITHUB.md  ROADMAP_V2.md  ROADMAP_V3.md  ROADMAP_V4.md  TESTS_IMMEDIATS_V2.md  TEST_IMMEDIATS.md  TEST_LOOP.md  TEST_LOOP_V2.md
latex/: example1.tex
latexcor/: cli.py  config.py  config.yaml  encoding_converter.py  file_manager.py  latex_compiler.py  utils.py
latexcor/tests/: test_cli.py  test_config.py  test_encoding_converter.py  test_file_manager.py  test_latex_compiler.py  test_logic_robustness.py  test_mermaid_processor.py  test_security.py  test_utils.py
