[project]
name = "latexcor"
version = "0.3.4"
description = "Outil CLI pour la gestion de fichiers LaTeX"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "infocornouaille", email = "90894019+infocornouaille@users.noreply.github.com" }
]
dependencies = [
    "chardet>=7.4.3",
    "tomli>=2.4.1",
    "typer>=0.25.1",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
latexcor = "latexcor.cli:main"

# Nouvelle syntaxe standardisée à la place de [tool.uv]
[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"