[project]
name = "latexcor"
version = "0.4.0"
description = "Outil CLI pour la gestion de fichiers LaTeX"
readme = "README.md"
# Minimum Python 3.13 for latest optimizations and stable AST
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "infocornouaille", email = "90894019+infocornouaille@users.noreply.github.com" }
]
dependencies = [
    "chardet>=7.4.3",
    # 'tomli' was removed as it's built-in via 'tomllib' in Python 3.11+
    "typer>=0.25.1",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
latexcor = "latexcor.cli:main"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Align Black target version with the interpreter
[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"